--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Customize page icon. href points to icon, assembled by CopyWebpackPlugin-->
+    <link rel="icon" href="icons.ico" type="image/ico">
     <title>Webpack</title>
 </head>
 <body>
@@ -12,6 +14,9 @@
     <div class="container">
         <h1>Webpack Course</h1>
     </div>
+    <hr>
+    <div class="logo"></div>
+    <pre></pre>
 
 </body>
 </html>
