--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,7 @@
     <title>Webpack</title>
 </head>
 <body>
-
-    <div class="container">
-        <h1>Webpack Course</h1>
-    </div>
-    <hr>
-    <div class="logo"></div>
-    <pre></pre>
-
+<div id="app">
+</div>
 </body>
 </html>
